about me, portfolio panel

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 <div id="nav"></div>
 <div id="frontpage"></div>
+<div id="aboutme"></div>
+<div id="projects"></div>
 <div id="app"></div>
 </body>
 <script src="./js/scripts.min.js"></script>
