restructured content, added skills content

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
 <div id="nav"></div>
 <div id="frontpage"></div>
-<div id="aboutme"></div>
-<div id="projects"></div>
-<div id="app"></div>
+<div id=profileContent>
+  <div id="aboutme"></div>
+  <div id="projects"></div>
+  <div id="app"></div>
+</div>
+
 </body>
 <script src="./js/scripts.min.js"></script>
 </html>
