Skills animation, Portfolio content

--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Anton|Bungee|Ranga|Rubik" rel="stylesheet">
 <body>
 <div id="nav"></div>
-<div id="frontpage"></div>
-<div id=profileContent>
-  <div id="aboutme"></div>
-  <div id="projects"></div>
-  <div id="app"></div>
-</div>
+<header id="frontpage"></header>
+<div id=profileContent></div>
 
 </body>
 <script src="./js/scripts.min.js"></script>
